Fixed z-index of menu + small improvement for readability by making the text larger.

--- a/src/assets/styles/partials/_layout.scss
+++ b/src/assets/styles/partials/_layout.scss
@@ -6,7 +6,7 @@
 
 .f-body { margin: 0; }
 
-.f-menu { position: fixed; top: 0; left: 0; right: 0; z-index: 1; }
+.f-menu { position: fixed; top: 0; left: 0; right: 0; z-index: 2000; }
 
 .f-container { margin: 36px 10px 10px 10px; z-index: 0; }
 
@@ -18,13 +18,13 @@
 
 // MENU LAYOUT
 
-.f-menu { display: flex; flex-wrap: wrap; }
+.f-menu { display: flex; flex-wrap: wrap; .f-control { padding-top: 4px; } }
 
-.f-menu-item, .f-menu-toggle { line-height: 24px; }
+.f-menu-item, .f-menu-toggle { line-height: 30px; }
 
-.f-menu-item { padding: 0 10px; }
+.f-menu-item { padding: 0 14px; }
 
-.f-menu-toggle { padding: 0 5px; margin-left: -10px; &:not(.f-active) + .f-menu { display: none; } }
+.f-menu-toggle { padding: 0 5px; margin-left: -14px; &:not(.f-active) + .f-menu { display: none; } }
 
 
 // MENU STYLING
@@ -33,7 +33,7 @@
 
 .f-menu .f-control svg { fill: $light; }
 
-.f-menu-item, .f-menu-toggle { font-size: 12px; text-transform: uppercase; }
+.f-menu-item, .f-menu-toggle { font-size: 14px; text-transform: uppercase; }
 
 .f-menu-toggle { &:before { content: '\25BC'; } }
 
